@@ -3,6 +3,9 @@ CHANGES-1.6.txt
 
 CHANGES IN CUPS V1.6.4
 
+	- Added a SyncOnClose directive to cups-files.conf to force cupsd to
+	  call fsync before closing any configuration/state files it writes
+	  (<rdar://problem/14523043>)
 	- Added USB quirk rule for Lexmark E238 (<rdar://problem/14493054>)
 	- Closed server connections were still not always detected
 	  (<rdar://problem/14484313>)
